syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "GrpcAppProto";
option objc_class_prefix = "GAP";
// The greeting service definition.
service GrpcService {
  // Greeting procedure
  rpc grpcProcedure (GrpcRequest) returns (GrpcResponse) {}
}
// The request message containing the user's name and age.
message GrpcRequest {
  string name = 1;
  int32 age = 2;
}
// The response message containing the greetings
message GrpcResponse {
  string message = 1;
}